--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ html {
 
 body {
   -webkit-font-smoothing: antialiased;
+  overscroll-behavior: none;
   line-height: 1.3;
   margin: 0;
   background-color: #222;
